# horizon-orchestra-full

./: .agent-traces.jsonl  .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  ANCHORED_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.fly  Horizon-Orchestra.md  LICENSE  Makefile  ORCHESTRA.md  README.md  SECURITY.md  SKILLS.md  briefing_INTEGRATION.md  conftest.py  docker-compose.yml  docker-entrypoint.sh  entrypoint.py  fly.toml  horizon.py  install.sh  kimi_k25_architectures.md  launch_nemotron_gui.py  news_INTEGRATION.md  orchestrajarvismerge.patch  package_workspace_for_ssd.ps1  pyproject.toml  pyproject.toml.rej  requirements.txt  run.py  start_gui.py  test_parsing.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy.yml  security.yml  test.yml
api/express/: package-lock.json  package.json  server.js
api/sdk/: client.py
channels/ts/: package-lock.json  package.json
charts/orchestra/: Chart.yaml  README.md  values.yaml
ci-cd/: .dockerignore  .gitlab-ci.yml  Dockerfile  Jenkinsfile  Makefile  README.md
ci-cd/argocd/: application.yaml  project.yaml
ci-cd/helm/: values.yaml
ci-cd/scripts/: build.py  deploy.py  lint.py  test.py
ci-cd/tests/: test_pipeline.py
docs/: 00-architecture-overview.md  01-api-gateway.md  02-service-discovery.md  03-tracing-pipeline.md  04-cicd-pipeline.md  05-finance-engine.md  06-logistics-v1.md  07-logistics-v2.md  08-ui-ux.md  09-build-orchestrator.md
docs/middleware/: rate-limit.md
examples/: basic_usage.py  custom_tool.py  review_code.py  server_example.py
go-services/router/: go.mod  main.go
go/envd/: go.mod  go.sum  main.go
gui/: council.css  council_panel.js  council_stream.js  index.html
gui/css/: chat.css  components.css
gui/js/: app.js
gui/orchestra-gui/: index.html
node/: package-lock.json  package.json  tsconfig.json
node/src/: config.ts  proxy.ts  server.ts  sse.ts  types.ts  validation.ts  websocket-relay.ts
orchestra/: __init__.py  adaptive_context.py  agent_loop.py  arch_a.py  arch_b.py  arch_c.py  arch_d.py  arch_e.py  audio_tools.py  auth.py  benchmark.py  briefing_api.py  briefing_config.py  briefing_monitor.py  briefing_scheduler.py  briefing_tools.py  browser_connector.py  checkpoint.py  citation.py  cli.py  context_engine.py  conversation.py  deploy.py  dev_team.py  domain_router.py  evaluation.py  gemma4_provider.py  heartbeat.py  intent.py  kernel.py  kimi_hardening.py  long_horizon.py  memory.py  model_council.py  model_orchestration.py  multiagent.py  news_briefing_bridge.py  news_connector.py  news_feed.py  news_sources.py  (+23 more)
orchestra-site/: developers.html  tasks.html
orchestra-site/favorites/: favorites.html
orchestra/analytics/: __init__.py  bi_export.py
orchestra/api/: __init__.py  schemas.py  server.py
orchestra/audit/: __init__.py  integration.py  log.py  verifier.py
orchestra/billing/: __init__.py  architecture_billing.py  middleware.py  stripe_billing.py
orchestra/browser/: __init__.py  agent.py  analyzer.py  engine.py  sessions.py
orchestra/channels/: __init__.py  gateway.py
orchestra/cloud/: __init__.py  autoscaler.py  compute.py  deployer.py  edge.py  files.py  gpu_cluster.py  gpu_providers.py  iac.py  inference_router.py  lambda_runtime.py  sessions.py  state.py  terafab.py  websocket_relay.py
orchestra/code_agent/: __init__.py  agent.py  benchmark.py  cli.py  githooks.py  reviewer.py  session.py  settings.py
orchestra/codebase/: __init__.py  editor.py  git_ops.py  hardening.py  indexer.py  tdd_loop.py  worktrees.py
orchestra/compliance/: __init__.py  data_residency.py  gdpr.py  hipaa.py  org_quotas.py  scim.py
orchestra/connectors/: __init__.py  airtable.py  amazon_business.py  aws.py  base.py  gcal.py  gdrive.py  github.py  gmail.py  google_workspace.py  hubspot.py  jira.py  linear.py  mcp_bridge.py  meta_business.py  microsoft365.py  monday.py  n8n.py  notion.py  salesforce.py  slack.py  snowflake.py  stripe.py  zapier.py
orchestra/cuda/: __init__.py  kernel_manager.py  memory_manager.py  multi_gpu.py
orchestra/desktop/: __init__.py  computer_use.py
orchestra/documents/: __init__.py  charts.py  converter.py  pdf.py  pptx.py  xlsx.py
orchestra/embeddings/: __init__.py  cache.py  chroma.py  chunker.py  index.py  models.py  pgvector.py  pinecone.py  pipeline.py  supabase.py
orchestra/finance/: __init__.py  charting.py  fundamentals.py  market_data.py  news.py  portfolio.py  registry.py  screener.py  watchlist.py
orchestra/frontier/: __init__.py  agent_bridge.py  context_store.py  dom_interpreter.py  safety.py  sandbox.py  task_runner.py
orchestra/guardian/: __init__.py  audit_ledger.py  beyond_guardrails.py  capability_lattice.py  code_guard.py  inference_gateway.py  ingestion_gate.py  policy_engine.py  security_config.py  threat_intelligence.py
orchestra/hardware/: __init__.py  agent.py  datapath.py  fitness.py  isa.py  mapping.py  rtl.py  (+3 more)
rust/orchestra-core/: Cargo.toml
rust/orchestra-core/src/: embedding_index.rs  json_parser.rs  lib.rs  router.rs  seccomp_compiler.rs  tokenizer.rs
scripts/: backup.sh  bootstrap.sh  deploy.sh  health-check.sh  log-rotate.sh  pre-commit-check.sh
sdk/: package-lock.json  package.json  tsconfig.json
site/: index.html
src/: lib.rs
tests/: test_active_agents.py  test_agent.py  test_agent_loop.py  test_agentmesh.py  test_api_server.py  test_arch_b_d.py  test_architectures.py  test_audit.py  test_billing.py  test_billing_architectures.py  test_billing_scaffold.py  test_briefing.py  test_browser.py  test_celery_bridge.py  test_channels_v2.py  test_config.py  test_council.py  test_cuda.py  test_dashboard.py  test_embeddings.py  test_enterprise_teams_guardian.py  test_frontier.py  test_gemma4.py  test_hardware.py  test_horizon.py  test_integration_core.py  test_memory.py  test_model_router.py  test_monitor.py  test_monitor_routes.py  test_nemotron.py  test_new_modules.py  test_news.py  test_nursing_agents.py  test_opus4.py  test_opus47.py  test_orchestra.py  test_parity.py  test_reasoning_routes.py  test_red_team_resilience_parsing.py  (+14 more)
(+1352 files in other folders)
