[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "horizon-orchestra"
version = "0.5.0"
description = "Multi-model agentic AI harness with skills, browser automation, speech, billing, and Perplexity Computer parity"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ashton Fritz", email = "ashtonfritz3@gmail.com" }]
requires-python = ">=3.11"
keywords = ["ai", "agents", "llm", "orchestration", "multi-model", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.60.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
gemma = ["google-genai>=1.0.0"]
claude = ["anthropic>=0.40.0"]
stripe = ["stripe>=11.0.0"]
playwright = ["playwright>=1.50.0"]
speech = [
    "faster-whisper>=1.0.0",
    "elevenlabs>=1.0.0",
    "deepgram-sdk>=3.0.0",
]
yaml = ["pyyaml>=6.0"]
redis = ["redis>=5.0.0"]
server = ["fastapi>=0.115.0", "uvicorn[standard]>=0.34.0"]
all = [
    "google-genai>=1.0.0",
    "anthropic>=0.40.0",
    "stripe>=11.0.0",
    "playwright>=1.50.0",
    "faster-whisper>=1.0.0",
    "pyyaml>=6.0",
    "redis>=5.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
orchestra = "orchestra.cli:main"

[project.urls]
Repository = "https://github.com/astewartfritz/horizon-orchestra"
Documentation = "https://github.com/astewartfritz/horizon-orchestra/blob/main/ORCHESTRA.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestra*"]
